feat: add base styles and Layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": false
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx"]
+  "exclude": ["node_modules"]
+  // "include": ["**/*.ts", "**/*.tsx"]
 }
