--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "format:fix": "yarn format --write"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "gatsby": "^4.5.3",
     "gatsby-plugin-image": "^2.5.2",
+    "gatsby-plugin-layout": "^3.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sass": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
@@ -37,8 +39,8 @@
     "sass": "^1.49.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2",
     "@babel/core": "^7.16.10",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/preset-env": "^7.16.10",
     "@babel/preset-typescript": "^7.16.7",
     "@testing-library/jest-dom": "^5.16.1",
@@ -46,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-jest": "^27.4.6",
+    "babel-preset-gatsby": "^2.5.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
@@ -61,7 +64,9 @@
     "jest": "^27.4.7",
     "lint-staged": ">=10",
     "prettier": "2.5.1",
+    "rimraf": "^3.0.2",
     "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-order": "^5.0.0",
     "stylelint-prettier": "^2.0.0",
