--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "resolveJsonModule": true,
     "isolatedModules": false
   },
-  "exclude": ["node_modules"]
-  // "include": ["**/*.ts", "**/*.tsx"]
+  "exclude": ["node_modules"],
+  "include": ["**/*.ts", "**/*.tsx"]
 }
