--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "gatsby": "^4.5.3",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-layout": "^3.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
