--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "format:fix": "yarn format --write"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "classnames": "^2.3.1",
     "gatsby": "^4.5.3",
     "gatsby-plugin-anchor-links": "^1.2.1",
