--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "prepare": "husky install",
     "clean": "gatsby clean",
-    "clean:all": "rimraf node_modules public .cache && rimraf node_modules",
-    "clean:cache": "rimraf public .cache",
+    "clean:all": "rimraf node_modules public graphcms-fragments .cache && rimraf node_modules",
+    "clean:cache": "rimraf public .cache graphcms-fragments",
     "lint": "eslint . -c .eslintrc.js . --ext .js,.ts,.jsx,.tsx",
     "lint:fix": "yarn lint --fix",
     "test": "yarn jest",
@@ -27,13 +26,14 @@
     "classnames": "^2.3.1",
     "gatsby": "^4.5.3",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-image": "^2.5.2",
+    "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-layout": "^3.5.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sass": "^5.5.0",
     "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-sitemap": "^5.5.0",
     "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-source-graphcms": "^2.8.0",
     "gatsby-transformer-sharp": "^4.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
