--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,7 @@
       "styles/*": ["styles/*"],
       "utils/*": ["utils/*"],
       "hooks/*": ["hooks/*"],
-      "shared/*": ["shared/*"],
-      "constants/*": ["constants/*"]
+      "shared/*": ["shared/*"]
     }
   },
   "exclude": ["node_modules"],
