--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.7",
     "lint-staged": ">=10",
+    "plop": "^3.0.5",
     "prettier": "2.5.1",
     "rimraf": "^3.0.2",
     "stylelint": "^14.2.0",
