--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "templates/*": ["components/templates/*"],
       "pages/*": ["pages/*"],
       "styles/*": ["styles/*"],
+      "types/*": ["types/*"],
       "utils/*": ["utils/*"],
       "hooks/*": ["hooks/*"],
       "shared/*": ["shared/*"]
